# fastcoder

./: .env.example  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Makefile  README.md  SECURITY.md  pyproject.toml  run.py  run.sh
.github/workflows/: ci.yml
admin-panel/: index.html
deploy/: README.md
deploy/docker/: .dockerignore  .env.prod.example  Dockerfile  docker-compose.prod.yml  down.sh  health.sh  logs.sh  restart.sh  status.sh  up.sh
deploy/local/: common.sh  health.sh  logs.sh  preflight.sh  restart.sh  start.sh  status.sh  stop.sh
docs/: REQUIREMENTS_v4.docx  business-gap-analysis.html  project-specification.html
docs/archive/: ANALYZER_PLANNER_CONTEXT_IMPLEMENTATION.md  IMPLEMENTATION_GUIDE.md  MANIFEST.md  REQUIREMENTS_v4.js  autonomous-dev-agent-system-design.html  deep-research-report (13).md
login-ui/: index.html
src/fastcoder/: __init__.py  main.py
src/fastcoder/analyzer/: __init__.py
src/fastcoder/api/: __init__.py  admin_routes.py  health.py  metrics.py  ops_routes.py  rate_limiter.py  request_context.py  routes.py
src/fastcoder/auth/: __init__.py  auth_routes.py  middleware.py  scim_provider.py  scim_routes.py  sso_provider.py  types.py
src/fastcoder/backup/: __init__.py
src/fastcoder/codebase/: __init__.py  (+7 more)
tests/: conftest.py  test_api_routes.py  test_auth.py  test_autonomous_agent.py  test_core_components.py  test_coverage_gaps.py  test_coverage_gaps2.py  test_graphify_provider.py  test_llm_and_codebase.py  test_memory_context_errors.py  test_orchestrator.py  test_tools.py  test_types_and_config.py
workspace-ui/: index.html
(+62 files in other folders)
